<resources>
    <string name="app_name">Pitch Perfectly Accurately Practice</string>
    <string name="action_settings">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="scale">Scale</string>
    <string name="keySig">Key Signature</string>
    <string name="noteMode">Note Practice</string>
    <string name="inteMode">Interval Practice</string>
    <string name="chordMode">Triad Practice</string>
    <string name="songMode">Song Practice</string>
    <string name="notegraph_mode">Note Beginner Mode</string>
    <string name="showFreqNote">Show Frequency</string>
    <string name="errorAllowance">Error Allowance</string>
    <string name="leastStableTime">Least Stable Time</string>
    <string name="refreshRate">Refresh Rate</string>
    <string name="correctTimeText">Show Correct Time</string>
    <string name="autoPlayback">Auto Playback</string>

    <string name="note_mode">Note</string>
    <string name="interval_mode">Interval</string>
    <string name="chord_mode">Triad</string>
    <string name="song_mode">Music</string>
    <string name="summary">Summary</string>
    <string name="contact">Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
    <string name="cancel_all">Cancel All</string>

    <string name="Top10">Top 10 Notes</string>
    <string name="Bot5">5 Notes to Practice</string>
    <string name="Summary">Summary Page</string>
</resources>
