<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/note_mode"
            android:icon="@drawable/icons8_music_50"
            android:title="@string/note_mode" />
        <item
            android:id="@+id/notegraph_mode"
            android:icon="@drawable/graph"
            android:title="Graph"
            />
        <item
            android:id="@+id/interval_mode"
            android:icon="@drawable/trans_interval"
            android:title="@string/interval_mode" />
        <item
            android:id="@+id/triad_mode"
            android:icon="@drawable/chord"
            android:title="@string/chord_mode" />
        <item
            android:id="@+id/song_mode"
            android:icon="@drawable/microphone"
            android:title="Song"
            />
    </group>
    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/summary"
                    android:title="@string/summary" />
                <item
                    android:id="@+id/contact"
                    android:title="@string/contact" />
            </group>
        </menu>
    </item>

</menu>
