<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e8e0f5">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:text="@string/autoPlayback"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/toTextView"
        tools:layout_editor_absoluteX="20dp" />


    <EditText
        android:id="@+id/toSpinner"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/scaleSpinner"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSpinner" />

    <EditText
        android:id="@+id/keySigSpinner"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleSpinner" />

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="262dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:text="@string/errorAllowance"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scaleTextView"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/leastStableTime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTextView" />

    <TextView
        android:id="@+id/keySigTextView"
        android:layout_width="262dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/correctTimeText"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleTextView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Adjust Octave"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

</androidx.constraintlayout.widget.ConstraintLayout>