<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#c1e6da">

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/autoPlayback"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_group" />

    <ToggleButton
        android:id="@+id/fromSpinner"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_group" />

    <EditText
        android:id="@+id/toSpinner"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />

    <EditText
        android:id="@+id/scaleSpinner"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSpinner" />

    <EditText
        android:id="@+id/keySigSpinner"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleSpinner" />

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="262dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/errorAllowance"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTextView" />

    <TextView
        android:id="@+id/scaleTextView"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/leastStableTime"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTextView" />

    <TextView
        android:id="@+id/keySigTextView"
        android:layout_width="262dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/correctTimeText"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleTextView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:text="Triad Scale"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toggle_group"
        layout="@layout/triad_scale_misc_settings_page_toggle_button_group"
        android:layout_width="303dp"
        android:layout_height="182dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />



</androidx.constraintlayout.widget.ConstraintLayout>