<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modeSettingsTabFragments.NotePoolSelectionTab">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/Tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modeSettingsTabFragments.NotePoolSelectionTab"
        android:background="#c1e6da">

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="143dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/from"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/errorAllowance_EditText"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />

        <Spinner
            android:id="@+id/leastStableTimeEditText"
            android:layout_width="173dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorAllowance_EditText" />

        <Spinner
            android:id="@+id/showCorrectTimeEditText"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leastStableTimeEditText" />

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="130dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromTextView" />

        <TextView
            android:id="@+id/scaleTextView"
            android:layout_width="133dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/scale"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toTextView" />

        <TextView
            android:id="@+id/keySigTextView"
            android:layout_width="224dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/keySig"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scaleTextView" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/general_cancel_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keySigTextView"
            app:layout_constraintVertical_bias="0.48000002">

            <TableLayout
                android:id="@+id/note_pool_table"
                android:layout_width="337dp"
                android:layout_height="125dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"></TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/general_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@android:string/selectAll"
            app:layout_constraintBaseline_toBaselineOf="@+id/general_cancel_all"
            app:layout_constraintEnd_toStartOf="@+id/general_cancel_all"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/general_cancel_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/general_select_all"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>