<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFF90"
    tools:context=".activities.NoteModeFilterPageActivity">

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:text="@string/from"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromSpinner" />

    <Spinner
        android:id="@+id/scaleSpinner"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSpinner" />

    <Spinner
        android:id="@+id/keySigSpinner"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleSpinner" />

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTextView" />

    <TextView
        android:id="@+id/scaleTextView"
        android:layout_width="133dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scale"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTextView" />

    <TextView
        android:id="@+id/keySigTextView"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/keySig"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaleTextView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/baseline_keyboard_backspace_black_18dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="406dp"
        android:layout_height="221dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:id="@+id/note_pool_table"
            android:layout_width="337dp"
            android:layout_height="125dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
